# libnpy

./: .clang_format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE_NOTES  libnpy-config.cmake.in  numpy.npz  test.py  vcpkg.json
.github/: copilot-instructions.md
.github/skills/version-bump/: SKILL.md
.github/workflows/: prgate.yaml
CSharpWrapper/: CMakeLists.txt  NumpyIONative.i  Tensor.cs
assets/test/: bool.npy  complex128.npy  complex64.npy  float32.npy  float64.npy  int16.npy  int32.npy  int32_array.npy  int32_big.npy  int64.npy  int8.npy  test.npz  test_compressed.npz  uint16.npy  uint32.npy  uint64.npy  uint8.npy  uint8_fortran.npy  unicode.npy
cmake/: npyConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
docs/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classnpy_1_1npzfilereader-members.html  classnpy_1_1npzfilereader.html  classnpy_1_1npzfilewriter-members.html  classnpy_1_1npzfilewriter.html  classnpy_1_1npzstringreader-members.html  classnpy_1_1npzstringreader.html  classnpy_1_1npzstringwriter-members.html  classnpy_1_1npzstringwriter.html  classnpy_1_1tensor-members.html  classnpy_1_1tensor.html  dir_9c72ff797903f31f5557823a81e30288.html  dir_9c72ff797903f31f5557823a81e30288_dep.map  dir_9c72ff797903f31f5557823a81e30288_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_vars.html  graph_legend.html  index.html  md__r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacenpy.html  namespaces.html  npy_8h.html  npy_8h__incl.map  npy_8h__incl.md5  npy_8h_source.html  pages.html  structnpy_1_1file__entry-members.html  (+7 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  (+32 more)
examples/custom_tensors/: CMakeLists.txt  custom.cpp
examples/images/: CMakeLists.txt  display.py  images.cpp
include/npy/: core.h  npy.h  npz.h  tensor.h
nuget/: template.nuspec.in  template.targets.in
ports/libnpy/: portfile.cmake  vcpkg.json
ports/matajoh-libnpy/: portfile.cmake
samples/: CMakeLists.txt  CMakeLists.txt.in  README.md.in  images.cpp  images_net.cs  info.cpp
src/: CMakeLists.txt  core.h  dtype.cpp  dtype.h  memstream.cpp  npy.cpp  npy.h  npz.cpp  npz.h  tensor.cpp  tensor.h  util.h  zip.cpp  zip.h
src/CSharpWrapper/: AssemblyInfo.cs.in  CMakeLists.txt  NumpyIONative.i  Tensor.cs
src/miniz/: miniz.cpp  miniz.h
test/: CMakeLists.txt  crc32.cpp  custom_tensor.cpp  exceptions.cpp  generate_large_test.py  libnpy_tests.cpp  libnpy_tests.h  memstream.cpp  npy_peek.cpp  npy_read.cpp  npy_read.h  npy_write.cpp  npz_peek.cpp  npz_read.cpp  npz_write.cpp  tensor.cpp
test/CSharpTests/: CMakeLists.txt  test.cs  test_exceptions.cs  test_npy_peek.cs  test_npy_read.cs  test_npy_write.cs  test_npz_peek.cs  test_npz_read.cs  test_npz_write.cs
test/vcpkg/: CMakeLists.txt  main.cpp  vcpkg.json
test/vcpkg/port/libnpy/: portfile.cmake
test/vcpkg/port/matajoh-libnpy/: portfile.cmake  vcpkg.json
